--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ div {
   width:700px;
   margin: auto;
   font-family:'Helvetica Neue';
-  backgrounf
+  background: white;
+  
 }
 
 /* ID selector to select the element with id 'main-header' */
